force-app/main/default/objects/IndiaPoll__c/IndiaPoll__c.object-meta.xml
<CustomObject>
    <label>IndiaPoll</label>
    <nameField>
        <label>India Poll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IndiaPolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>