force-app/main/default/objects/IndiaPoll__c/fields/IndiaState__c.field-meta.xml
<CustomField>
    <fullName>IndiaState__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndiaState</label>
    <referenceTo>IndiaState__c</referenceTo>
    <relationshipLabel>IndiaPolls</relationshipLabel>
    <relationshipName>IndiaPolls</relationshipName>
    <type>Lookup</type>
</CustomField>