force-app/main/default/objects/IndiaPoll__c/fields/Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Name__c</fullName>
    <label>Phase Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>