force-app/main/default/objects/IndiaPoll__c/fields/Poll_Date__c.field-meta.xml
<CustomField>
    <fullName>Poll_Date__c</fullName>
    <label>Poll Date</label>
    <type>Date</type>
</CustomField>